--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@
 *.exe
 HexEd.it - Browser-based Online and Offline Hex Editing.url
 #Ignored folders
-/exercises/
 /docs/
 /.vscode/
-/Slides/
-/helloWorld/
+/slides/
 */odbg110/
